kubernetes/apps/docmost/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docmost
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  strategy:
    type: Recreate
    rollingUpdate: null
  replicas: 1
  selector:
    matchLabels:
      app: docmost
  template:
    metadata:
      labels:
        app: docmost
    spec:
      containers:
        - name: docmost
          image: docmost/docmost:0.96.0
          ports:
            - name: http
              containerPort: 3000
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 30
            periodSeconds: 20
          resources:
            requests:
              cpu: 50m
              memory: 512Mi
          volumeMounts:
            - name: data
              mountPath: /app/data/storage
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: docmost-data
---
apiVersion: v1
kind: Service
metadata:
  name: docmost
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  selector:
    app: docmost
  ports:
    - name: http
      port: 3000
      targetPort: http
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: docmost
  annotations:
    argocd.argoproj.io/sync-wave: "2"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
spec:
  parentRefs:
    - name: homelab
      namespace: envoy-gateway-system
      group: gateway.networking.k8s.io
      kind: Gateway
  hostnames:
    - docmost.homelab
    - docmost.erasmus.works
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: docmost
          group: ""
          kind: Service
          port: 3000
          weight: 1
